Mobile-first design in progress--tablet and laptop/desktop design to follow.

--- a/app/assets/styles/modules/_portal-logo.css
+++ b/app/assets/styles/modules/_portal-logo.css
@@ -1,6 +1,10 @@
 .portal-logo img{
 	display: block;
-	float: left;
-	max-width: 100%;
-	height: 80px;
+	margin: auto;
+	width: 500px;
+	height: 100px;
+
+	@mixin atSmall {
+		float: left;
+	}
 }
