--- a/app/assets/styles/modules/_content-slider.css
+++ b/app/assets/styles/modules/_content-slider.css
@@ -5,7 +5,7 @@
 #slider figure div {
 	width: 33.333333%;
 	float: left;
-	margin: 0
+	margin: 0;
 	padding: 0;
 	list-style: none;
 	text-decoration: none;
