--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,13 +1,12 @@
+@import "normalize.css";
 @import "base/_global";
 @import "base/_mixins";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
-@import "modules/_slideshow";
 @import "modules/_banner";
 @import "modules/_btn";
 @import "modules/_content-slider";
-@import "modules/_header";
 @import "modules/_portal-logo";
 @import "modules/_search";
 @import "modules/_site-footer";
 @import "modules/_slideshow";
 @import "modules/_tile-container";
+@import "modules/_slideshow";  
