--- a/app/assets/styles/modules/_banner.css
+++ b/app/assets/styles/modules/_banner.css
@@ -1,4 +1,4 @@
-.banner {
+.banner {  
 	display: block;
 	position: relative;
 	width: 100%;
@@ -8,47 +8,144 @@
 	background: darkblue;
 
 	@mixin atSmall {
+		position: fixed;
+	}
+
+	@mixin atMedium {
+		position: fixed;
+
+		&--light {
+			background-color: rgba(23, 51, 72, .55);
+		}
+	}
+
+	&__portal-logo img {
+		display: block;
+		margin: auto;
+		width: 500px;
+		height: 100px;
+
+		@mixin atSmall {
+			float: left;
+		}
+	}
+
+	&__nav {
+		text-align: center;
+		width: 100%;
+		margin-top: auto;
+		padding: 10px 20px 20px;
+
+		@mixin atSmall {
+			float: right;
+			margin: 25px 0 0 0;
+		}
+	}	
+
+	&--is-visible {
+		display:block;
+	}
+
+	&__nav a {
+		color: white;
+	    font-style: oblique;
+	    font-weight: 300;
+	    background-color: darkblue;
+		margin: 9px;
+	
+
+	    @mixin atSmall {
+	    	padding: 10px 15px 3px;
+		}
+	}
+
+	&__nav a:hover {
+
+		@mixin atSmall {
+			background-color: #FF4141;
+			border: 1px solid #FF4141;
+			color: #FFFFFF;
+		}
+	}
+
+	&__nav b:last-child a {
 		
+		@mixin atSmall {
+			padding: 1px 15px 3px;
+			border: 1px solid rgba(0, 0, 0, 0.2);
+		}
 	}
+
 }
 
-.banner-nav {
-	text-align: center;
-	width: 100%;
-	margin-top: auto;
-	padding: 10px 20px 20px;
 
-	@mixin atSmall {
-		float: right;
-		margin: 25px 0 0 0;
+/* Menu icon (optional to add later)
+	&__menu-icon {
+		position: absolute;
+		z-index: 10	;
+		height: 20px;
+		width: 20px;
+		top: 10px;
+		right: 10px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			background-color: #FFF;
+			z-index: 10	;
+			height: 3px;
+			width: 20px;
+			top: 0;
+			right: 0;
+			transform-origin: 0 0;
+			transition: transform .3s ease-out;
+
+		}
+
+		&__middle {
+			position: absolute;
+			background-color: #FFF;
+			z-index: 10	;
+			height: 3px;
+			width: 20px;
+			top: 8px;
+			right: 0;
+			transition: all .3s ease-out;
+			transform-origin: 0 50%;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			background-color: #FFF;
+			z-index: 10	;
+			height: 3px;
+			width: 20px;
+			bottom: 1px;
+			left: 0;
+			transform-origin: 0 100%;
+			transition: transform .3s ease-out;
+		}
 	}
-}
 
-.banner-nav a {
-	color: white;
-    font-style: oblique;
-    font-weight: 300;
-    background: darkblue;
-	margin: 9px;
-	
+	&__menu-icon-close-x {
+		&::before {
+			transform: rotate(45deg) scaleX(1.25);
+		}
 
-    @mixin atSmall {
-    	padding: 10px 15px 3px;
-	}
-}
+		.banner__menu-icon-close-x__middle {
+			opacity: 0;
+			transform: scaleX(0);
+		}
 
-.banner-nav a:hover 
+		&::after {
+			transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+		}
 
-	@mixin atSmall {
-		background-color: #FF4141;
-		border: 1px solid #FF4141;
-		color: #FFFFFF;
-	}
+	}	
 
-.banner-nav b:last-child a {
-	
-	@mixin atSmall {
-		padding: 1px 15px 3px;
-		border: 1px solid rgba(0, 0, 0, 0.2);
-	}
-}
+	*/
+
+
+
+
