--- a/app/assets/styles/modules/_search.css
+++ b/app/assets/styles/modules/_search.css
@@ -50,6 +50,12 @@ input#support-search-input.special:focus {
 	outline: none;
 }
 
+.hc-search-form::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
 /*@media (max-width:767px) and (min-width:320px) {
 	.mobile-icon-search:before {
 	display: none;
